# aws-fargate-workload-runner

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-runtime.txt
.github/workflows/: tests.yaml  tests.yml
docker/: Dockerfile
infra/terraform/: backend.tf.example  ecr.tf  ecs.tf  iam.tf  iam_iot.tf  iam_sqs.tf  iam_task_role.tf  logs.tf  main.tf  outputs.tf  s3_artifacts.tf  variables.tf  vpc.tf
loadtest/configs/: iot-10rps-example.json  sqs-10rps-example.json
src/awfr/: __init__.py  cli.py  config.py  exit_codes.py  metrics.py  progress.py  sqs_monitor.py  uploader.py  worker.py
src/awfr/scenarios/: __init__.py  iot_core_topic_publish.py  registry.py  sqs_enqueue.py
tests/: test_config.py  test_sqs_monitor.py  test_worker.py
tools/: __init__.py  build_push.py  fetch_run.py  run_task.py  tf_outputs.py
